--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - "8080:8080" # domyślny port Vite
     env_file:
-      - ./backend/.env.docker
+      - ./frontend/.env.docker
     working_dir: /app
     depends_on:
       - backend
