--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.8'
-
 services:
   backend:
+    container_name: mamfachowca_docker-backend
     build: ./backend
     ports:
       - "8000:80"  # host:container
@@ -14,6 +13,7 @@ services:
       - app-network
 
   frontend:
+    container_name: mamfachowca_docker-frontend
     build: ./frontend
     ports:
       - "8080:8080" # domyślny port Vite
